gccida/c0/rtx_renumbered_equal_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_renumbered_equal_p/src/jump.c:2698:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+50h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_renumbered_equal_p/src/jump.c:2718:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
byte_x = ( int)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_renumbered_equal_p/src/jump.c:2723:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_renumbered_equal_p/src/jump.c:2723:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_renumbered_equal_p/src/jump.c:2725:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_renumbered_equal_p/src/jump.c:2725:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_renumbered_equal_p/src/jump.c:2738:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
byte_y = ( int)y[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_renumbered_equal_p/src/jump.c:2743:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_renumbered_equal_p/src/jump.c:2743:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_renumbered_equal_p/src/jump.c:2745:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_renumbered_equal_p/src/jump.c:2745:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y)); 
                 ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_renumbered_equal_p/src/obj/jump.o] Error 1
